fix(path): change `/urls/:id` -> `/urls/:short_id`

--- a/app/views/urls/show.html.erb
+++ b/app/views/urls/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Your shortened URL:</h1>
+<p>website: <%= @url.website %></p>
 <p><%= short_url(@url.short_id) %></p>
 <p>Total visits: <%= @url.visit %></p>
