--- a/app/views/urls/application.html.erb
+++ b/app/views/urls/application.html.erb
@@ -7,6 +7,59 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <style>
+      body {
+        background-color: #121212;
+        color: #e0e0e0;
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+      }
+
+      #flash-messages {
+        position: absolute;
+        top: 10px;
+        width: 100%;
+        text-align: center;
+        z-index: 1000;
+      }
+
+      .flash-notice {
+        color: #76ff03;
+        font-weight: bold;
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      .flash-alert {
+        color: #ff1744;
+        font-weight: bold;
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      h1 {
+        color: #76ff03;
+        text-shadow: 0 0 15px #00e676, 0 0 25px #00e676;
+        font-size: 2.5rem;
+      }
+
+      p {
+        font-size: 1.2rem;
+      }
+    </style>
   </head>
 
   <body>
